--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -87,13 +87,13 @@ block content
         .checkbox-list
           label.checkbox-label
             input.input-checkbox(type="checkbox")
-            .checkbox-label-content.icon-vector Можно курить
+            .checkbox-label-content Можно курить
           label.checkbox-label
             input.input-checkbox(type="checkbox" checked="")
-            .checkbox-label-content.icon-vector Можно с питомцами
+            .checkbox-label-content Можно с питомцами
           label.checkbox-label
             input.input-checkbox(type="checkbox" checked="")
-            .checkbox-label-content.icon-vector Можно пригласить гостей (до 10 человек)
+            .checkbox-label-content Можно пригласить гостей (до 10 человек)
       .element-box_width_200
         .element-box__caption_left
           h3 Radio Buttons
@@ -104,6 +104,27 @@ block content
           label.radio-label
             input.input-radio(type="radio" name="gender")
             .radio-label-content Женщина
+      .element-box 
+        .element-box__caption_left
+          h3 Toggle
+        .toggle-list
+          label.toggle-label
+            input.input-toggle(type="checkbox" checked="")
+            .toggle-label-content Получать спецпредложения
+          label.toggle-label
+            input.input-toggle(type="checkbox")
+            .toggle-label-content Получать спецпредложения
+      .element-box 
+        .element-box__caption_left
+          h3 like button
+        .like-list
+          label.like-label
+            input.input-like(type="checkbox")
+            .like-label-content 2
+          label.like-label
+            input.input-like(type="checkbox" checked="")
+            .like-label-content 12
+
       p.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore assumenda nostrum odit recusandae ipsam maxime. Sapiente repellendus, provident vitae quae nobis distinctio veniam possimus debitis mollitia, quam consequuntur rerum laudantium atque quaerat corporis iste non nam placeat est expedita fugiat! Eaque voluptates deserunt odio deleniti, adipisci natus fugit distinctio ab fugiat quasi vero velit est magni excepturi quae quas quisquam saepe! Possimus, accusantium laboriosam voluptas laborum harum alias velit culpa! Architecto neque, fugit ipsam pariatur quae ab nihil quos consequuntur enim atque cupiditate repellat illo, sint deserunt eum! Consequatur deserunt sint, voluptate, illo ducimus incidunt laboriosam eum aliquam enim, architecto laborum aut ipsa eos at earum. Quod excepturi a est porro velit, expedita culpa reiciendis sunt natus eligendi repellendus dicta deserunt odio. Pariatur assumenda ipsa alias repellendus magnam deserunt quae enim eum eveniet in. Ea tempora laudantium nesciunt consectetur ab vero dignissimos eaque ducimus? Eos, perferendis voluptatem dicta dolor voluptas repellat ut dignissimos libero vitae ipsam in totam consequatur obcaecati, quam sunt facere, possimus cupiditate magni sequi ratione cum. Temporibus excepturi exercitationem, soluta, commodi quia sit natus molestiae fugit quos modi ut saepe nulla, id beatae tempora! Nobis, fugiat aliquam aut facilis dolore fuga voluptates iste deserunt reprehenderit dolorum cupiditate.
     .form-elements__column
