--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -132,9 +132,15 @@ block content
           +rate-button(5)
           +rate-button(4)
 
-      p.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore assumenda nostrum odit recusandae ipsam maxime. Sapiente repellendus, provident vitae quae nobis distinctio veniam possimus debitis mollitia, quam consequuntur rerum laudantium atque quaerat corporis iste non nam placeat est expedita fugiat! Eaque voluptates deserunt odio deleniti, adipisci natus fugit distinctio ab fugiat quasi vero velit est magni excepturi quae quas quisquam saepe! Possimus, accusantium laboriosam voluptas laborum harum alias velit culpa! Architecto neque, fugit ipsam pariatur quae ab nihil quos consequuntur enim atque cupiditate repellat illo, sint deserunt eum! Consequatur deserunt sint, voluptate, illo ducimus incidunt laboriosam eum aliquam enim, architecto laborum aut ipsa eos at earum. Quod excepturi a est porro velit, expedita culpa reiciendis sunt natus eligendi repellendus dicta deserunt odio. Pariatur assumenda ipsa alias repellendus magnam deserunt quae enim eum eveniet in. Ea tempora laudantium nesciunt consectetur ab vero dignissimos eaque ducimus? Eos, perferendis voluptatem dicta dolor voluptas repellat ut dignissimos libero vitae ipsam in totam consequatur obcaecati, quam sunt facere, possimus cupiditate magni sequi ratione cum. Temporibus excepturi exercitationem, soluta, commodi quia sit natus molestiae fugit quos modi ut saepe nulla, id beatae tempora! Nobis, fugiat aliquam aut facilis dolore fuga voluptates iste deserunt reprehenderit dolorum cupiditate.
     .form-elements__column
+      .element-box 
+        .element-box__caption
+          .element-box__caption_left
+            h3 Range Slider
+          .element-box__caption_right
+            h3 5 000₽ - 10 000₽
+      .element-box__body
+        .range-slider
       p.
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus ducimus aut natus quod? Possimus repellat nesciunt consequatur eligendi iste soluta molestias harum, nulla nobis deleniti quibusdam, quisquam exercitationem aut odit.
 
