--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -138,7 +138,11 @@ block content
           .element-box__caption_left
             h3 Range Slider
           .element-box__caption_right
-            h3 5 000₽ - 10 000₽
+            h3 
+              span.range-result-left 5 000
+              span ₽ - 
+              span.range-result-right 10 000
+              span ₽
       .element-box__body
         .range-slider
       p.
