--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -9,6 +9,7 @@
 @use "./blocks/datepicker/datepicker-toxin.scss";
 @use "./blocks/rate-button/rate-button.scss";
 @use 'nouislider/dist/nouislider.css';
+@use "./blocks/nouislider/nouislider" as toxin-nouislider;
 $height: 44px;
 
 .form-elements__box {
