--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -8,8 +8,8 @@
 @use "air-datepicker/dist/css/datepicker.css";
 @use "./blocks/datepicker/datepicker-toxin.scss";
 // @use "./blocks/rate-button/rate-button.scss";
-@use 'nouislider/dist/nouislider.css';
-@use "./blocks/nouislider/nouislider" as toxin-nouislider;
+// @use 'nouislider/dist/nouislider.css';
+// @use "./blocks/nouislider/nouislider" as toxin-nouislider;
 $height: 44px;
 
 .form-elements__box {
