--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -1,6 +1,6 @@
-@use '../../../color';
+@use '../../color';
 @use '__button/dropdown__button.scss';
-@use '../../../fonts/iconfont/iconfont.scss';
+// @use '../../fonts/iconfont/iconfont.scss';
 
 $height: 44px;
 
