--- a/src/main.scss
+++ b/src/main.scss
@@ -1,6 +1,6 @@
 @use "../zero.css";
 @use "../fonts/iconfont/iconfont.scss";
-@use "../fonts/type.css";
+@use "../fonts/type.scss";
 @use "fonts/montserrat/montserrat.scss";
 
 $fontFamily: "montserrat";
