--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -1,5 +1,5 @@
 extends ../layout/ui-kit
-include blocks/dropdown/dropdown
+include ../components/dropdown/dropdown
 include ../components/rate-button/rate-button
 include ../components/range-slider/range-slider
 //- blocks/rate-button/rate-button
