--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -1,12 +1,12 @@
 @use "../color.scss";
 @use "../layout/ui-kit.scss";
-@use "./blocks/input-string/input-string.scss";
+// @use "./blocks/input-string/input-string.scss";
 // @use "item-quantity-dropdown/lib/item-quantity-dropdown.min.css";
 // @use './blocks/iqdropdown/iqdropdown';
-@use './blocks/dropdown/dropdown';
+// @use './blocks/dropdown/dropdown';
 @use '../fonts/iconfont/iconfont.scss';
-@use "air-datepicker/dist/css/datepicker.css";
-@use "./blocks/datepicker/datepicker-toxin.scss";
+// @use "air-datepicker/dist/css/datepicker.css";
+// @use "./blocks/datepicker/datepicker.scss";
 // @use "./blocks/rate-button/rate-button.scss";
 // @use 'nouislider/dist/nouislider.css';
 // @use "./blocks/nouislider/nouislider" as toxin-nouislider;
