--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -152,8 +152,29 @@ block content
       .element-box_width_266
         .element-box__caption_left
           h3 buttons
-        .element-box__body
-          p qqq
+        .element-flex-box_width_266
+          .button-box-99-44
+            button.button
+              h3 click me
+          .button-box-99-44
+            button.button.button_hover
+              h3 click me
+          .button-box-2-99-44
+            button.button-2
+              h3 click me
+          .button-box-2-99-44
+            button.button-2.button-2_hover
+              h3 click me
+          .button-box-3
+            button.button-3
+              h3 click me
+          .button-box-3
+            button.button-3.button-3_hover
+              h3 click me
+      .element-box
+        .button-box-320-44
+          button.button.button_payment
+            h3 перейти к оплате
 
       p.
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus ducimus aut natus quod? Possimus repellat nesciunt consequatur eligendi iste soluta molestias harum, nulla nobis deleniti quibusdam, quisquam exercitationem aut odit.
